maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {
^JediEscaper:2: error: expected start of definition
override def run() {
         ^JediEscaper:3: error: Missing closing brace `}' assumed here
var x=0
^JediEscaper:4: error: expected class or object definition
var y=0
^JediEscaper:5: error: expected class or object definition
var z=0
^JediEscaper:6: error: expected class or object definition
for (i <- 0 to getMondeHauteur()-1){
^JediEscaper:16: error: expected class or object definition
for (w<- 0 to 120){
^